Add XPath validation